--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "nodemon --ignore gitbook index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +20,13 @@
   "homepage": "https://github.com/ULL-ESIT-SYTW-1617/practica-despliegues-en-iaas-y-heroku-rafadanipedro#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "child-process-promise": "^2.1.3",
     "express": "^4.14.0",
-    "morgan": "^1.7.0"
+    "gitbook": "^3.2.2",
+    "gitbook-cli": "^2.3.0",
+    "morgan": "^1.7.0",
+    "path": "^0.12.7",
+    "simple-git": "^1.54.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
