--- a/iaasserver/package.json
+++ b/iaasserver/package.json
@@ -8,5 +8,9 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "colors": "^1.1.2",
+    "express": "^4.14.0"
+  }
 }
