--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "prct03",
   "version": "1.0.0",
   "description": "Aplicación express para escuchar el webhook de Github y crear un Gitbook",
-  "main": "index.js",
+  "main": "bin/www",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon --ignore gitbook index.js",
+    "start": "node bin/www",
+    "dev": "nodemon --ignore gitbook bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
