--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/ULL-ESIT-SYTW-1617/practica-despliegues-en-iaas-y-heroku-rafadanipedro/issues"
   },
   "engines" : {
-    "node" : "6.7.0"
+    "node" : "6.7.0",
     "npm": "3.10.3"
   },
   "homepage": "https://github.com/ULL-ESIT-SYTW-1617/practica-despliegues-en-iaas-y-heroku-rafadanipedro#readme",
